<resources>
    <string name="app_name">StorageApplication</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginLockImage">LoginLockImage</string>
    <string name="Register">Register</string>
    <string name="already_registered">Already Registered</string>
    <string name="new_account">New Account</string>
    <string name="logout">Logout</string>
</resources>